安装官方高质量ts 申明文件for jquery

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "typescriptLearning_Amos",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {
+    "@types/jquery": "^3.5.5"
+  }
 }
