--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "typescriptLearning_Amos",
   "version": "1.0.0",
   "dependencies": {
-    "@types/jquery": "^3.5.5"
+    "@types/jquery": "^3.5.5",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
